[package]
name = "penguin"
version = "0.1.0"
edition = "2021"
authors = ["Ismael Sh <me@theiskaa.com>"]
description = "Generate strong memorable passwords and password lists from provided words"
readme = "README.md"
license = "MIT"
keywords = [
    "password",
    "password-generator",
    "possible-passwords",
    "generate-password",
    "password-list-generator",
]
repository = "https://github.com/theiskaa/penguin"

[lib]
name = "penguin"
path = "src/lib/lib.rs"

[[bin]]
name = "penguin"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
rand = "0.8.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
